--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -61,8 +61,29 @@ jobs:
         run: |
           mkdir -p libraries
 
-          cp dl_libraries/**/*.so libraries/
+          # 处理 Windows DLL 文件
+          for file in dl_libraries/**/*.dll; do
+            if [[ $file =~ libraries_windows-latest_x64_([0-9]+)\.([0-9]+) ]]; then
+              major="${BASH_REMATCH[1]}"
+              minor="${BASH_REMATCH[2]}"
+              version="${major}${minor}"
+              new_name="vcmp-python-plugin-04rel64-rspyo3-py${version}.dll"
+              cp "$file" "libraries/$new_name"
+            fi
+          done
 
+          # 处理 Linux SO 文件
+          for file in dl_libraries/**/*.so; do
+            if [[ $file =~ libraries_ubuntu-22.04_x64_([0-9]+)\.([0-9]+) ]]; then
+              major="${BASH_REMATCH[1]}"
+              minor="${BASH_REMATCH[2]}"
+              version="${major}${minor}"
+              new_name="vcmp-python-plugin-04rel64-rspyo3-py${version}.so"
+              cp "$file" "libraries/$new_name"
+            fi
+          done
+
+          # 清理下载目录
           rm -rf dl_libraries
           
       - name: List Artifacts after download
